--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="%PUBLIC_URL%/favicon.ico"
-    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -18,13 +14,28 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- FAVICONS -->
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/logo192.png"
+      sizes="180x180"
+      href="%PUBLIC_URL%/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicons/favicon-16x16.png"
     />
     <link
       rel="manifest"
-      href="%PUBLIC_URL%/manifest.json"
+      href="%PUBLIC_URL%/favicons/site.webmanifest"
     />
 
     <!-- FONTS -->
